Modify the permissions and fix the endpoint typo

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 项目本地运行端口号
 VITE_PORT = 9527
 VITE_MINIO_URL=http://10.10.12.12:8086
-VITE_BACKEND_URL=http://localhost:8095/
+VITE_BACKEND_URL=http://10.10.11.110:8095/
 VITE_USER_BACKEND_URL=http://localhost:8089
 VITE_DEFAULT_BUCKET_NAME=sv-file-bucket
