--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ VITE_PUBLIC_PATH=/
 # API Configuration
 VITE_BACKEND_URL=http://localhost:8095/api
 VITE_PROXY_DOMAIN=/api
-VITE_PROXY_DOMAIN_REAL=http://localhost:8095/
+VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
 
 # MinIO Configuration
 VITE_MINIO_URL=http://10.10.12.12:8086
