--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ VITE_PUBLIC_PATH=/
 
 # Development API Configuration
 VITE_PROXY_DOMAIN=/api
-VITE_PROXY_DOMAIN_REAL=http://localhost:8095
+VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
 VITE_BACKEND_URL=http://localhost:8095/api
 
 # Development MinIO Configuration
