--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "^1.4.0",
     "clipboard": "^2.0.11",
     "echarts": "^5.4.2",
-    "element-plus": "^2.3.7",
+    "element-plus": "^2.10.4",
     "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
     "js-cookie": "^3.0.5",
@@ -50,6 +50,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
+    "vue3-grid-layout": "^1.0.0",
     "vue3-lottie": "^2.7.4",
     "vxe-table": "^4.4.2",
     "xe-utils": "^3.5.11"
