--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.3",
