--- a/.env.development
+++ b/.env.development
@@ -11,6 +11,11 @@ VITE_PROXY_DOMAIN=/api
 VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
 VITE_BACKEND_URL=http://10.10.12.12:8095/api
 
+# Local API Configuration
+# VITE_PROXY_DOMAIN=/api
+# VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
+# VITE_BACKEND_URL=http://localhost:8095/api
+
 # Development MinIO Configuration
 VITE_MINIO_URL=http://10.10.12.12:8086
 
