Feature/work order schedule (#13)
* work order schedule wip #1

* test commit

* display hover info based on cursor position, adjust loading animation to cover only calendar section

* integrate work order calendar into work order center view

* integrate new search work order api, rework calendar to use work order composable as data source, fix bug for UnifiedWorkOrderFilters.vue related to reactive object, and v-model binding, translation for popover labels,

* missed commit file

* Commented outdated equipment tree api. Overall style update & Bugfix on data fetching for work order calendar view

* Minor english locale update for calendar

* Fixed auto view remount on tab whenever selected by removing router-view full_path key binding in App.vue, as AppMain.vue's router-view already covers this. Fixed transition animation related bug by wrapping ViewWorkOrder with a root div, which is required for component inside transition.

* Update UI on hover popover in work order calendar

* Style tweak on toolbar layout, even background/border color for work order calendar

* Change calendar view to use non-page search work order api, hover popover ui update & visibility delay, event display style tweak, adjusted max event per grid

* hide tags when data is not provided in hover popover

* Remove extra search input, rename labels related to state seleciton in work order filters.

* Revert run config file change, added .run folder in. gitignore, minor bugfix from merge

* change task/index.vue to have one root level element to prevent transition from AppMain.vue breaking rendering

* Rename work order index.vue's component name, revert work order table component name

---------

Co-authored-by: Erik Yu <147850688+erikyu01@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/list": "^6.1.18",
+    "@fullcalendar/multimonth": "^6.1.18",
+    "@fullcalendar/timegrid": "^6.1.18",
+    "@fullcalendar/vue3": "^6.1.18",
     "@vueuse/core": "^10.2.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
