--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "screenfull": "^6.0.2",
     "tailwindcss": "^3.3.2",
     "unplugin-vue-define-options": "^1.3.8",
+    "uuid": "^11.1.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
