Feature/user team management (#36)
* Replacing mock user service with user client backend, Hide ui which are not supported feature temporary. Update user validation to fit api,

* Refactor and modular user form from user management, Wip on team management

# Conflicts:
#	src/views/user/components/UserDetail.vue

* Disable confirm button when no change, added reset button, fixed validation bug, and added loading animation in UserForm. Reuse edit user in UserDetail. Update my account button in navbar to route to UserDetail. Support resetting internal image list in FileUploadMultiple with a expose function.

* Added optional base url override in request.js, setup api calls for user and teams

* Team management bugfix and display update. Minor auto formatting,

* Sorting bugfix, team management table location/equipment column display update,

* minor formatting fix

* Added new user creation result popup. Adjust validation rule for first/last name & employee number. Minor fix on task-library import path mismatch

* Add popover detail for associated user/location/equipment column in team table

* Minor styling and bugfix, update mock data in getAllRoles

--- a/.env
+++ b/.env
@@ -19,6 +19,9 @@ VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
 VITE_MINIO_URL=http://10.10.12.12:8086
 VITE_DEFAULT_BUCKET_NAME=sv-file-bucket
 
+# User Client Configuration
+VITE_USER_CLIENT_URL=http://dev.fpsmonitoring.com:8089/api
+
 # Build Configuration
 VITE_LEGACY=false
 VITE_ROUTER_HISTORY=hash
