--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
+    "vue-tel-input": "^9.5.0",
     "vue3-grid-layout": "^1.0.0",
     "vue3-lottie": "^2.7.4",
     "vuedraggable": "^4.1.0",
