work order modifications on add tasks and add standards & modified the standards creation & create work order from template & minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,9 @@ selenium-debug.log
 *.local
 docs/*
 
+# Debug components (development only)
+src/components/WorkOrder/TodoView/JsonDebugDrawer.vue
+src/components/WorkOrder/TodoView/JsonTreeItem.vue
+
 #package-lock.json
 #yarn.lock
