Feature/user integration (#44)
* init commit;

# Conflicts:
#	src/api/user.js
#	src/layout/components/navbar/index.vue
#	src/utils/request.js
#	src/views/user/components/UserDetail.vue

* config login & logout;

* minor update;

* apply lint fix after commit

* fix the page sidebar and title render bug;

* add All Permissions switch for dev-mode(true);

* implement token refresh feature;

* fix logged in user pinia persistent;

* minior update'

* Department CRUD, Shift CRUD, Support certificate for user, other adjustments for api

* Bugfix on department/team/user

* Department update, change role option to depend on department in user form. Some minor update

* UserForm formatting. UserDetail minor fix. Enable/Disable/Delete api update in user table. Change certificate number to be required in certificate form.

* Add custom field reset after submit in user form. Team related dto field update. Minor reformat in certificate form

* Add role info in user selection in team form

* Added confirmation for self user status deactivation, removed status field in user form, added blur handling on vue-tel-input, minor user form layout update

* Adjust aspect ratio of work order calendar. Added searching on department/user/role/location/equipment count hover. Bugfix on external user update not handled in user management. Bugfix on no reload after creating user and click outside dialog. Update development environment url for user backend

* Minor code auto formatting

* Bug fix on loading department data in edit team form

* Minor display bug, code auto formatting, incorrect translation key

---------

Co-authored-by: Eric11-dev <61522097+Eric11-dev@users.noreply.github.com>

--- a/.env.development
+++ b/.env.development
@@ -11,16 +11,22 @@ VITE_PROXY_DOMAIN=/api
 VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
 VITE_BACKEND_URL=http://10.10.12.12:8095/api
 
-# Local API Configuration
-# VITE_PROXY_DOMAIN=/api
-# VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
-# VITE_BACKEND_URL=http://localhost:8095/api
+# Development User Client Configuration
+VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
+
+# Cognito Call Back URL
+VITE_CALLBACK_URL=http://localhost:9527/callback
 
 # Development MinIO Configuration
 VITE_MINIO_URL=http://10.10.12.12:8086
 
 # Development Build Configuration
 VITE_LEGACY=false
+
+# Permission Control
+VITE_ALL_PERMISSION=true
+# Pre-refresh time (seconds), default 120 seconds
+VITE_TOKEN_SKEW=120
 
 # Debug Settings for WebStorm
 NODE_ENV=development
