--- a/.env
+++ b/.env
@@ -15,12 +15,15 @@ VITE_BACKEND_URL=http://localhost:8095/api
 VITE_PROXY_DOMAIN=/api
 VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
 
+# User Client Configuration
+VITE_USER_CLIENT_URL=http://localhost:8089/api/user
+
+# Cognito Call Back URL
+VITE_CALLBACK_URL=http://localhost:9527/callback
+
 # MinIO Configuration
 VITE_MINIO_URL=http://10.10.12.12:8086
 VITE_DEFAULT_BUCKET_NAME=sv-file-bucket
-
-# User Client Configuration
-VITE_USER_CLIENT_URL=http://dev.fpsmonitoring.com:8089/api
 
 # Build Configuration
 VITE_LEGACY=false
