init staging branch;

--- a/.env.staging
+++ b/.env.staging
@@ -1,11 +1,31 @@
-# 预发布也需要生产环境的行为
-# https://cn.vitejs.dev/guide/env-and-mode.html#modes
-NODE_ENV=production
+# ===========================================
+# Staging Environment Variables
+# ===========================================
 
-VITE_PUBLIC_PATH = /
+VITE_PORT=9527
+VITE_PUBLIC_PATH=/
 
-# 线上环境后端地址
-VITE_PROXY_DOMAIN_REAL = ""
+# API Configuration
+VITE_PROXY_DOMAIN=/api
+VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
+VITE_BACKEND_URL=http://10.10.12.12:8095/api
 
-# 是否为打包后的文件提供传统浏览器兼容性支持 支持 true 不支持 false
-VITE_LEGACY = false
+# User Client Configuration
+VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
+
+# Cognito Call Back URL
+VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
+
+# MinIO Configuration
+VITE_MINIO_URL=http://10.10.12.12:8086
+
+# Build Configuration
+VITE_LEGACY=false
+
+# Permission Control
+VITE_ALL_PERMISSION=true
+VITE_TOKEN_SKEW=120
+
+# Set to Staging mode and disable debugging
+NODE_ENV=staging
+VITE_DEBUG=false
