--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,6 @@ server {
     # The port that Nginx is listening on
     listen 80;
 
-    # 你的域名或 IP 地址，在 Docker 环境中可忽略
-    # server_name localhost;
-
     # Static File Root Directory
     root /usr/share/nginx/html;
     index index.html;
@@ -14,7 +11,7 @@ server {
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     # Attempt to directly access the file; if the file does not exist, fall back to index.html
-    This line is of crucial importance for the history mode of Vue Router.
+    # This line is of crucial importance for the history mode of Vue Router.
     location / {
         try_files $uri $uri/ /index.html;
     }
