--- a/.env.staging
+++ b/.env.staging
@@ -11,7 +11,7 @@ VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
 VITE_BACKEND_URL=http://10.10.12.12:8095/api
 
 # User Client Configuration
-VITE_USER_CLIENT_URL=http://10.10.12.140:8089/api/user
+VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
 
 # Cognito Call Back URL
 VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
