update staging profile;

--- a/.env.staging
+++ b/.env.staging
@@ -7,8 +7,8 @@ VITE_PUBLIC_PATH=/
 
 # API Configuration
 VITE_PROXY_DOMAIN=/api
-VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
-VITE_BACKEND_URL=http://10.10.12.12:8095/api
+VITE_PROXY_DOMAIN_REAL=https://dev.fpsmonitoring.com/api/maintenance
+VITE_BACKEND_URL=https://dev.fpsmonitoring.com/api/maintenance
 
 # User Client Configuration
 VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
@@ -17,7 +17,7 @@ VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
 VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
 
 # MinIO Configuration
-VITE_MINIO_URL=http://10.10.12.12:8086
+VITE_MINIO_URL=https://dev.fpsmonitoring.com/api/minio
 
 # Build Configuration
 VITE_LEGACY=false
