fix the chatbot connection bug;

--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ VITE_PROXY_DOMAIN_REAL=http://localhost:8095/api
 # User Client Configuration
 VITE_USER_CLIENT_URL=http://localhost:8089/api/user
 
+# Chatbot Configuration
+VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
+
 # Cognito Call Back URL
 VITE_CALLBACK_URL=http://localhost:9527/callback
 
