--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,9 @@ VITE_BACKEND_URL=http://10.10.12.12:8095/api
 # Development User Client Configuration
 VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
 
+# Chatbot Configuration
+VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
+
 # Cognito Call Back URL
 VITE_CALLBACK_URL=http://localhost:9527/callback
 
