add config to staging;

--- a/.env.staging
+++ b/.env.staging
@@ -13,11 +13,14 @@ VITE_BACKEND_URL=https://dev.fpsmonitoring.com/api/maintenance
 # User Client Configuration
 VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
 
-# Cognito Call Back URL
-VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
+# Chatbot Configuration
+VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
 
 # MinIO Configuration
 VITE_MINIO_URL=https://dev.fpsmonitoring.com/api/minio
+
+# Cognito Call Back URL
+VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
 
 # Build Configuration
 VITE_LEGACY=false
