MES-1241: Show version and release date in UI

--- a/.env.development
+++ b/.env.development
@@ -34,3 +34,7 @@ VITE_TOKEN_SKEW=120
 # Debug Settings for WebStorm
 NODE_ENV=development
 VITE_DEBUG=true
+
+# Application Version Information
+VITE_VERSION=v1.0.3
+VITE_RELEASE_DATE=2025-10-24
