--- a/.env.staging
+++ b/.env.staging
@@ -9,3 +9,7 @@ VITE_PROXY_DOMAIN_REAL = ""
 
 # 是否为打包后的文件提供传统浏览器兼容性支持 支持 true 不支持 false
 VITE_LEGACY = false
+
+# Application Version Information
+VITE_VERSION=v1.0.3
+VITE_RELEASE_DATE=2025-10-24
