initially combine projects and resolving cors issue still in wip

--- a/.env.demo
+++ b/.env.demo
@@ -1,5 +1,5 @@
 # ===========================================
-# Development Environment Variables
+# Demo Environment Variables
 # ===========================================
 
 # Development Server
@@ -44,7 +44,7 @@ VITE_RELEASE_DATE=2025-11-07
 # ===========================================
 
 # QC Module Iframe Base URL
-VITE_QC_IFRAME_BASE_URL=http://10.10.12.12:3001
+VITE_QC_IFRAME_BASE_URL=http://10.10.12.168:3000
 
 # Production Module Iframe Base URL
 VITE_PRODUCTION_IFRAME_BASE_URL=http://10.10.12.12:8088/data/perspective/client/MES_Baseline
