Feature/resources stock adjustment (#76)
* refactor cognito config for env;

* Allow adjusting stock with transaction logs in spare part detail. Fix location filter tag display bug. Added loading animation for spare part detail view

* add demo config;

* refactor cognito config for env; (#72)

* refactor cognito config for env;

* add demo config;

---------

Co-authored-by: Eric11-dev <61522097+Eric11-dev@users.noreply.github.com>

* change user client;

* bugfix on material vendor create with dirty index

* keep avg cost decimal place to 2 places

---------

Co-authored-by: Eric11-dev <61522097+Eric11-dev@users.noreply.github.com>
Co-authored-by: Eric Huang <149441358+eric-fps-dev@users.noreply.github.com>
Co-authored-by: Erik Yu <147850688+erikyu01@users.noreply.github.com>

--- a/.env.development
+++ b/.env.development
@@ -19,6 +19,9 @@ VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
 
 # Cognito Call Back URL
 VITE_CALLBACK_URL=http://localhost:9527/callback
+VITE_COGNITO_DOMAIN=https://us-east-2efikszrut.auth.us-east-2.amazoncognito.com
+VITE_COGNITO_CLIENT_ID=4ih0c0267q6mrckj7fdsj2c7ct
+VITE_COGNITO_SCOPE=openid+profile+email
 
 # Development MinIO Configuration
 VITE_MINIO_URL=http://10.10.12.12:8086
