--- a/.env.staging
+++ b/.env.staging
@@ -25,6 +25,9 @@ VITE_MINIO_URL=https://dev.fpsmonitoring.com/api/minio
 
 # Cognito Call Back URL
 VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
+VITE_COGNITO_DOMAIN=https://us-east-2efikszrut.auth.us-east-2.amazoncognito.com
+VITE_COGNITO_CLIENT_ID=4ih0c0267q6mrckj7fdsj2c7ct
+VITE_COGNITO_SCOPE=openid+profile+email
 
 # Build Configuration
 VITE_LEGACY=false
