add version number and modify little style issue for the version badge

--- a/.env.development
+++ b/.env.development
@@ -39,8 +39,8 @@ NODE_ENV=development
 VITE_DEBUG=true
 
 # Application Version Information
-VITE_VERSION=v1.0.5
-VITE_RELEASE_DATE=2025-11-07
+VITE_VERSION=v1.0.6d
+VITE_RELEASE_DATE=2025-11-12
 
 # ===========================================
 # Iframe Module Configuration
