create dev-demo env

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "cross-env --max_old_space_size=4096 vite",
     "dev:debug": "cross-env --max_old_space_size=4096 vite --debug",
     "demo": "cross-env --max_old_space_size=4096 vite --mode demo",
+    "dev-demo": "cross-env --max_old_space_size=4096 vite --mode dev-demo",
     "build": "rimraf dist && cross-env vite build",
     "build:staging": "rimraf dist && cross-env vite build --mode staging",
     "build:demo": "rimraf dist && cross-env vite build --mode demo",
+    "build:dev-demo": "rimraf dist && cross-env vite build --mode dev-demo",
     "report": "rimraf dist && cross-env vite build",
     "vis": "set vis=true && vite build",
     "lint-fix": "eslint --fix --ext .js,.ts,.jsx,.tsx,.vue src",
