modify dev-demo env to staging env

--- a/.env.dev-demo
+++ b/.env.dev-demo
@@ -1,46 +1,44 @@
 # ===========================================
-# Development Environment Variables
+# Staging Environment Variables
 # ===========================================
 
-# Development Server
 VITE_PORT=9527
 VITE_PUBLIC_PATH=/
 
-# Development API Configuration
+# API Configuration
 VITE_PROXY_DOMAIN=/api
-VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
-VITE_BACKEND_URL=http://10.10.12.12:8095/api
+VITE_PROXY_DOMAIN_REAL=https://dev.fpsmonitoring.com/api/maintenance
+VITE_BACKEND_URL=https://dev.fpsmonitoring.com/api/maintenance
 
-# Development User Client Configuration
+# Application Version Information
+VITE_VERSION=v1.0.6d
+VITE_RELEASE_DATE=2025-11-12
+
+# User Client Configuration
 VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
 
 # Chatbot Configuration
 VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
 
+# MinIO Configuration
+VITE_MINIO_URL=https://dev.fpsmonitoring.com/api/minio
+
 # Cognito Call Back URL
-VITE_CALLBACK_URL=http://localhost:9527/callback
+VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
 VITE_COGNITO_DOMAIN=https://us-east-2efikszrut.auth.us-east-2.amazoncognito.com
 VITE_COGNITO_CLIENT_ID=4ih0c0267q6mrckj7fdsj2c7ct
 VITE_COGNITO_SCOPE=openid+profile+email
 
-# Development MinIO Configuration
-VITE_MINIO_URL=http://10.10.12.12:8086
-
-# Development Build Configuration
+# Build Configuration
 VITE_LEGACY=false
 
 # Permission Control
 VITE_ALL_PERMISSION=true
-# Pre-refresh time (seconds), default 120 seconds
 VITE_TOKEN_SKEW=120
 
-# Debug Settings for WebStorm
-NODE_ENV=development
-VITE_DEBUG=true
-
-# Application Version Information
-VITE_VERSION=v1.0.6d
-VITE_RELEASE_DATE=2025-11-12
+# Set to Staging mode and disable debugging
+NODE_ENV=staging
+VITE_DEBUG=false
 
 # ===========================================
 # Iframe Module Configuration
