MES-1402: Fix collapsed sidebar nested popups

--- a/.env.demo
+++ b/.env.demo
@@ -1,5 +1,5 @@
 # ===========================================
-# Demo Environment Variables
+# Development Environment Variables
 # ===========================================
 
 # Development Server
@@ -19,6 +19,9 @@ VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
 
 # Cognito Call Back URL
 VITE_CALLBACK_URL=http://localhost:9527/callback
+VITE_COGNITO_DOMAIN=https://us-east-2efikszrut.auth.us-east-2.amazoncognito.com
+VITE_COGNITO_CLIENT_ID=4ih0c0267q6mrckj7fdsj2c7ct
+VITE_COGNITO_SCOPE=openid+profile+email
 
 # Development MinIO Configuration
 VITE_MINIO_URL=http://10.10.12.12:8086
@@ -36,15 +39,15 @@ NODE_ENV=development
 VITE_DEBUG=true
 
 # Application Version Information
-VITE_VERSION=v1.0.5
-VITE_RELEASE_DATE=2025-11-07
+VITE_VERSION=v1.0.6
+VITE_RELEASE_DATE=2025-11-12
 
 # ===========================================
 # Iframe Module Configuration
 # ===========================================
 
 # QC Module Iframe Base URL
-VITE_QC_IFRAME_BASE_URL=http://10.10.12.168:3000
+VITE_QC_IFRAME_BASE_URL=http://10.10.12.12:3001
 
 # Production Module Iframe Base URL
-VITE_PRODUCTION_IFRAME_BASE_URL=https://dev.fpsmonitoring.com:8043/data/perspective/client/MES_Baseline
+VITE_PRODUCTION_IFRAME_BASE_URL=http://10.10.12.12:8088/data/perspective/client/MES_Baseline
