--- a/.env.development
+++ b/.env.development
@@ -39,7 +39,7 @@ NODE_ENV=development
 VITE_DEBUG=true
 
 # Application Version Information
-VITE_VERSION=v1.0.6d
+VITE_VERSION=v1.0.6
 VITE_RELEASE_DATE=2025-11-12
 
 # ===========================================
