update demo profile;

--- a/.env.demo
+++ b/.env.demo
@@ -18,7 +18,7 @@ VITE_USER_CLIENT_URL=http://10.10.12.10:8089/api/user
 VITE_CHATBOT_BASE_URL=http://10.10.12.10:5000/api/chatbot
 
 # Cognito Call Back URL
-VITE_CALLBACK_URL=http://localhost:9527/callback
+VITE_CALLBACK_URL=https://demo.fpsmonitoring.com/callback
 VITE_COGNITO_DOMAIN=https://us-east-2btp1hejgi.auth.us-east-2.amazoncognito.com
 VITE_COGNITO_CLIENT_ID=70jhbgt1q5hbdk061822umefs3
 VITE_COGNITO_SCOPE=openid+profile+email
