--- a/.env.demo
+++ b/.env.demo
@@ -15,7 +15,7 @@ VITE_BACKEND_URL=https://demo.fpsmonitoring.com/api/maintenance
 VITE_USER_CLIENT_URL=https://demo.fpsmonitoring.com/api/user
 
 # Chatbot Configuration
-VITE_CHATBOT_BASE_URL=https://demo.fpsmonitoring.com/chatbot
+VITE_CHATBOT_BASE_URL=https://demo.fpsmonitoring.com/api/chatbot
 
 # Cognito Call Back URL
 VITE_CALLBACK_URL=https://demo.fpsmonitoring.com/callback
