--- a/.env.demo
+++ b/.env.demo
@@ -1,5 +1,5 @@
 # ===========================================
-# Demo Environment Variables
+# Development Environment Variables
 # ===========================================
 
 # Development Server
@@ -8,20 +8,23 @@ VITE_PUBLIC_PATH=/
 
 # Development API Configuration
 VITE_PROXY_DOMAIN=/api
-VITE_PROXY_DOMAIN_REAL=http://10.10.12.12:8095/api
-VITE_BACKEND_URL=http://10.10.12.12:8095/api
+VITE_PROXY_DOMAIN_REAL=http://10.10.12.10:8095/api
+VITE_BACKEND_URL=http://10.10.12.10:8095/api
 
 # Development User Client Configuration
-VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
+VITE_USER_CLIENT_URL=http://10.10.12.10:8089/api/user
 
 # Chatbot Configuration
-VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
+VITE_CHATBOT_BASE_URL=http://10.10.12.10:5000/api/chatbot
 
 # Cognito Call Back URL
 VITE_CALLBACK_URL=http://localhost:9527/callback
+VITE_COGNITO_DOMAIN=https://us-east-2btp1hejgi.auth.us-east-2.amazoncognito.com
+VITE_COGNITO_CLIENT_ID=70jhbgt1q5hbdk061822umefs3
+VITE_COGNITO_SCOPE=openid+profile+email
 
 # Development MinIO Configuration
-VITE_MINIO_URL=http://10.10.12.12:8086
+VITE_MINIO_URL=http://10.10.12.10:8086
 
 # Development Build Configuration
 VITE_LEGACY=false
@@ -36,15 +39,15 @@ NODE_ENV=development
 VITE_DEBUG=true
 
 # Application Version Information
-VITE_VERSION=v1.0.5
-VITE_RELEASE_DATE=2025-11-07
+VITE_VERSION=v1.0.7
+VITE_RELEASE_DATE=2025-11-17
 
 # ===========================================
 # Iframe Module Configuration
 # ===========================================
 
 # QC Module Iframe Base URL
-VITE_QC_IFRAME_BASE_URL=http://10.10.12.168:3000
+VITE_QC_IFRAME_BASE_URL=https://demo.fpsmonitoring.com/qc
 
 # Production Module Iframe Base URL
-VITE_PRODUCTION_IFRAME_BASE_URL=https://dev.fpsmonitoring.com:8043/data/perspective/client/MES_Baseline
+VITE_PRODUCTION_IFRAME_BASE_URL=https://demo.fpsmonitoring.com:8043/data/perspective/client/MES_Baseline
