--- a/.env.dev-demo
+++ b/.env.dev-demo
@@ -11,8 +11,8 @@ VITE_PROXY_DOMAIN_REAL=https://dev.fpsmonitoring.com/api/maintenance
 VITE_BACKEND_URL=https://dev.fpsmonitoring.com/api/maintenance
 
 # Application Version Information
-VITE_VERSION=v1.0.6
-VITE_RELEASE_DATE=2025-11-12
+VITE_VERSION=v1.0.7
+VITE_RELEASE_DATE=2025-11-17
 
 # User Client Configuration
 VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
@@ -45,7 +45,7 @@ VITE_DEBUG=false
 # ===========================================
 
 # QC Module Iframe Base URL
-VITE_QC_IFRAME_BASE_URL=http://10.10.12.12:3001
+VITE_QC_IFRAME_BASE_URL=https://dev.fpsmonitoring.com/qc
 
 # Production Module Iframe Base URL
-VITE_PRODUCTION_IFRAME_BASE_URL=http://10.10.12.12:8088/data/perspective/client/MES_Baseline
+VITE_PRODUCTION_IFRAME_BASE_URL=https://dev.fpsmonitoring.com:8043/data/perspective/client/MES_Baseline
