--- a/.env.development
+++ b/.env.development
@@ -39,15 +39,15 @@ NODE_ENV=development
 VITE_DEBUG=true
 
 # Application Version Information
-VITE_VERSION=v1.0.6d
-VITE_RELEASE_DATE=2025-11-12
+VITE_VERSION=v1.0.7
+VITE_RELEASE_DATE=2025-11-17
 
 # ===========================================
 # Iframe Module Configuration
 # ===========================================
 
 # QC Module Iframe Base URL
-VITE_QC_IFRAME_BASE_URL=http://10.10.12.12:3001
+VITE_QC_IFRAME_BASE_URL=https://dev.fpsmonitoring.com/qc
 
 # Production Module Iframe Base URL
-VITE_PRODUCTION_IFRAME_BASE_URL=http://10.10.12.12:8088/data/perspective/client/MES_Baseline
+VITE_PRODUCTION_IFRAME_BASE_URL=https://dev.fpsmonitoring.com:8043/data/perspective/client/MES_Baseline
