--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nprogress": "^0.2.0",
     "ol": "^7.4.0",
     "package": "^1.0.1",
+    "panzoom": "^9.4.3",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^8.2.0",
     "pinia": "^2.1.4",
