--- a/.env.demo
+++ b/.env.demo
@@ -8,23 +8,23 @@ VITE_PUBLIC_PATH=/
 
 # Development API Configuration
 VITE_PROXY_DOMAIN=/api
-VITE_PROXY_DOMAIN_REAL=http://10.10.12.10:8095/api
-VITE_BACKEND_URL=http://10.10.12.10:8095/api
+VITE_PROXY_DOMAIN_REAL=https://demo.fpsmonitoring.com/api/maintenance
+VITE_BACKEND_URL=https://demo.fpsmonitoring.com/api/maintenance
 
 # Development User Client Configuration
-VITE_USER_CLIENT_URL=http://10.10.12.10:8089/api/user
+VITE_USER_CLIENT_URL=https://demo.fpsmonitoring.com/api/user
 
 # Chatbot Configuration
-VITE_CHATBOT_BASE_URL=http://10.10.12.10:5000/api/chatbot
+VITE_CHATBOT_BASE_URL=https://demo.fpsmonitoring.com/api/chatbot
 
 # Cognito Call Back URL
-VITE_CALLBACK_URL=http://localhost:9527/callback
+VITE_CALLBACK_URL=https://demo.fpsmonitoring.com/callback
 VITE_COGNITO_DOMAIN=https://us-east-2btp1hejgi.auth.us-east-2.amazoncognito.com
 VITE_COGNITO_CLIENT_ID=70jhbgt1q5hbdk061822umefs3
 VITE_COGNITO_SCOPE=openid+profile+email
 
 # Development MinIO Configuration
-VITE_MINIO_URL=http://10.10.12.10:8086
+VITE_MINIO_URL=https://demo.fpsmonitoring.com/api/minio
 
 # Development Build Configuration
 VITE_LEGACY=false
