--- a/.env.dev-demo
+++ b/.env.dev-demo
@@ -24,7 +24,7 @@ VITE_CHATBOT_BASE_URL=https://dev.fpsmonitoring.com/api/chatbot
 VITE_MINIO_URL=https://dev.fpsmonitoring.com/api/minio
 
 # Cognito Call Back URL
-VITE_CALLBACK_URL=https://dev.fpsmonitoring.com/callback
+VITE_CALLBACK_URL=http://localhost:9527/callback
 VITE_COGNITO_DOMAIN=https://us-east-2efikszrut.auth.us-east-2.amazoncognito.com
 VITE_COGNITO_CLIENT_ID=4ih0c0267q6mrckj7fdsj2c7ct
 VITE_COGNITO_SCOPE=openid+profile+email
