--- a/.env.demo
+++ b/.env.demo
@@ -50,4 +50,4 @@ VITE_RELEASE_DATE=2025-11-18
 VITE_QC_IFRAME_BASE_URL=https://demo.fpsmonitoring.com/qc
 
 # Production Module Iframe Base URL
-VITE_PRODUCTION_IFRAME_BASE_URL=https://demo.fpsmonitoring.com:8043/data/perspective/client/MES_Baseline
+VITE_PRODUCTION_IFRAME_BASE_URL=https://dev.fpsmonitoring.com:8043/data/perspective/client/MES_Production
