Feature/overview simulation (#115)
* first version of overview simulation

* update version for dev-demo

--- a/.env.dev-demo
+++ b/.env.dev-demo
@@ -11,8 +11,8 @@ VITE_PROXY_DOMAIN_REAL=https://dev.fpsmonitoring.com/api/maintenance
 VITE_BACKEND_URL=https://dev.fpsmonitoring.com/api/maintenance
 
 # Application Version Information
-VITE_VERSION=v1.0.9
-VITE_RELEASE_DATE=2025-12-05
+VITE_VERSION=v1.0.9s
+VITE_RELEASE_DATE=2025-12-12
 
 # User Client Configuration
 VITE_USER_CLIENT_URL=https://dev.fpsmonitoring.com/api/user
