Bugfix MES-1196: remove the status = 0 equipment under work order detail view

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ selenium-debug.log
 *.sln
 *.local
 docs/*
+/.trees
 
 # Debug components (development only)
 #src/components/WorkOrder/TodoView/JsonDebugDrawer.vue
